# olids-uat

./: .gitignore  README.md  pyproject.toml  sample_output.txt
config/: concept_mapping_tests.yml  person_pattern_mappings.yml  referential_mappings.yml  test_suites.yml
config/environments/: template.yml
src/: requirements.txt
src/olids_testing/: __init__.py
src/olids_testing/cli/: __init__.py  main.py
src/olids_testing/cli/commands/: __init__.py  config_cmd.py  deploy_cmd.py  run_cmd.py
src/olids_testing/cli/ui/: __init__.py  display.py
src/olids_testing/core/: __init__.py  config.py  connection.py  global_validator.py  parallel_runner.py  runner.py  sql_logger.py  sql_templates.py  test_base.py
src/olids_testing/tests/: __init__.py
src/olids_testing/tests/concept_mapping/: __init__.py  concept_validator.py
src/olids_testing/tests/data_quality/: __init__.py  completeness_checks.py
src/olids_testing/tests/person_patterns/: __init__.py  pattern_validator.py
src/olids_testing/tests/referential_integrity/: __init__.py  relationship_validator.py
