[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "olids-uat-testing"
version = "0.1.0"
description = "OLIDS UAT Testing Framework - Comprehensive data validation for healthcare data warehouse"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "OLIDS Team", email = "olids@nhs.net" },
]
keywords = ["snowflake", "testing", "data-validation", "healthcare", "olids"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "snowflake-snowpark-python>=1.33.0",
    "snowflake-cli>=3.10.0",
    "click>=8.1.8,<8.2.0",
    "rich>=14.0.0,<14.1.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "flake8>=7.3.0",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
]

[project.scripts]
olids-test = "olids_testing.cli.main:cli"

[project.urls]
Homepage = "https://github.com/ncl-icb-analytics/olids-uat"
Repository = "https://github.com/ncl-icb-analytics/olids-uat.git"
Issues = "https://github.com/ncl-icb-analytics/olids-uat/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/olids_testing"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true